...
          app:layout_constraintBottom_toBottomOf="@+id/enter_other"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/pic"/>
        <EditText
          android:id="@+id/name"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginTop="16dp"
          android:layout_marginBottom="8dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:ems="10"
          android:hint="@string/create_profile_name"
          android:inputType="textPersonName"
          android:textColor="@color/text_regular"
          android:textSize="16sp"
          app:layout_constraintBottom_toTopOf="@+id/date_of_birth"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="Autofill"
          tools:text="@string/create_profile_name"/>

...
          android:ems="10"
          android:focusableInTouchMode="false"
          android:hint="@string/create_profile_date_of_birth"
          android:inputType="date"
          android:textColor="@color/text_regular"
          android:textSize="16sp"
          app:layout_constraintBottom_toTopOf="@+id/gender_spinner"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/name"
          tools:ignore="Autofill"
          tools:text="@string/create_profile_date_of_birth"/>
        <Spinner
...
            android:layout_height="wrap_content"
            android:buttonTint="@color/res_gold"
            android:text="@string/create_profile_support"
            android:visibility="visible"
            tools:text="@string/create_profile_support"/>
          <RadioButton
            android:id="@+id/radioClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/res_gold"
            android:text="@string/create_profile_client"
            android:visibility="visible"
            tools:text="@string/create_profile_client"/>
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/res_gold"
            android:text="@string/create_profile_heroin"
            tools:text="@string/create_profile_heroin"/>
          <RadioButton
            android:id="@+id/radioOpiates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/res_gold"
            android:text="@string/create_profile_other_opiates"
            tools:text="@string/create_profile_other_opiates"/>
...
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:text="@string/create_profile_substance_use"
          android:textSize="16sp"
          app:layout_constraintBottom_toTopOf="@+id/use_type_spinner"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/enter_other"
          tools:text="@string/create_profile_substance_use"/>
        <Spinner
          android:id="@+id/use_type_spinner"
...
          android:layout_marginBottom="8dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:dropDownWidth="match_parent"
          android:entries="@array/create_profile_use_type_array"
          android:spinnerMode="dropdown"
          app:layout_constraintBottom_toTopOf="@+id/clean_date"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/substance_use"/>
        <EditText
          android:id="@+id/clean_date"
          android:layout_width="0dp"
...
          android:layout_marginEnd="16dp"
          android:ems="10"
          android:focusable="true"
          android:focusableInTouchMode="false"
          android:hint="@string/create_profile_clean_date"
          android:inputType="date"
          app:layout_constraintBottom_toTopOf="@+id/record_button"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/use_type_spinner"
          tools:ignore="Autofill"
          tools:text="@string/create_profile_clean_date"/>
        <Button
...
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/clean_date"/>
      </android.support.constraint.ConstraintLayout>
    </LinearLayout>
  </ScrollView>
  <android.support.design.widget.BottomNavigationView
    android:id="@+id/core_navigation"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@color/res_green"
    app:elevation="0dp"
    app:itemBackground="@color/res_green"
    app:itemHorizontalTranslationEnabled="false"
...
