...
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.451"
    app:srcCompat="@drawable/pic"/>
  <Button
    android:id="@+id/report_use_yes"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="98dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="72dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/button_yes"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/space"
    app:layout_constraintTop_toBottomOf="@+id/report_use_question"/>
  <Button
    android:id="@+id/report_use_no"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="98dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="72dp"
    android:layout_marginStart="16dp"
    android:background="@drawable/ic_button_rectangle"
...
